# SimpleTransactionEngine

./: Cargo.toml  README.md  check.py
sample/: input2.csv  input3.csv  input4.csv  myoutput4.csv
src/: client.rs  decimal.rs  engine.rs  errors.rs  main.rs  transaction.rs
src/engine/: chargeback.rs  deposit.rs  dispute.rs  resolve.rs  withdrawal.rs
