[package]
name = "simple_transaction_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"